<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <TextView
        android:id="@+id/form_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:text="@string/form_title"
        />

    <View
        android:id="@+id/vertical_separator"
        android:layout_width="2dp"
        android:layout_height="0dp"
        android:background="@color/grey"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/form_title"
        app:layout_constraintStart_toEndOf="@id/first_int_layout"
        app:layout_constraintEnd_toStartOf="@id/second_int_layout"
        app:layout_constraintBottom_toBottomOf="@id/first_string_layout"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/first_int_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/vertical_separator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/second_int_layout"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        style="@style/TextBoxStyle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/first_int_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:hint="@string/first_int_hint"
            android:inputType="number"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/second_int_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/vertical_separator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/first_int_layout"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        style="@style/TextBoxStyle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/second_int_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:hint="@string/second_int_hint"
            android:inputType="number"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/first_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/first_int_layout"
        app:layout_constraintEnd_toEndOf="@id/first_int_layout"
        app:layout_constraintTop_toBottomOf="@id/first_int_layout"
        android:src="@drawable/ic_arrow_downward_24"
        />


    <ImageView
        android:id="@+id/second_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/second_int_layout"
        app:layout_constraintEnd_toEndOf="@id/second_int_layout"
        app:layout_constraintTop_toBottomOf="@id/second_int_layout"
        android:src="@drawable/ic_arrow_downward_24"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/first_string_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/first_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/second_string_layout"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        style="@style/TextBoxStyle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/first_string_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:hint="@string/first_text_hint"
            android:inputType="text"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/second_string_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/second_arrow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/first_string_layout"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        style="@style/TextBoxStyle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/second_string_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:hint="@string/second_text_hint"
            android:inputType="text"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/limit_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/vertical_separator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        style="@style/TextBoxStyle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/limit_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:hint="@string/limit_edittext_hint"
            android:inputType="number"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/confirm_form_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/limit_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/confirm_form_button"
        />
</androidx.constraintlayout.widget.ConstraintLayout>